# droneengage_yolo_ai

./: .gitignore  CMakeLists.txt  build.sh  build_ddebug.sh  build_imx500.sh  build_release.sh  de_ai_tracker.config.module.json  de_yolo_ai.config.local  de_yolo_ai.config.module.json  yolov8_cam_ai2r2_streamer_Working2.cpp
src/: defines.hpp  main.cpp  version.hpp
src/de_common/: configFile.cpp  de_module.cpp  de_module.hpp  localConfigFile.cpp  localConfigFile.hpp  messages.hpp  udpClient.cpp
src/helpers/: colors.hpp  helpers.cpp  helpers.hpp
src/yolo_ai/: output_tensor.hpp  udp_de_object_detection_tracking.cpp  udp_de_object_detection_tracking.hpp  video.cpp  video.hpp  yolo_ai.cpp  yolo_ai.hpp  yolo_ai_calback.hpp  yolo_ai_facade.cpp  yolo_ai_facade.hpp  yolo_ai_main.cpp  yolo_ai_main.hpp  yolo_ai_parser.cpp  yolo_ai_parser.hpp  yolov8_cam_ai2r2_streamer_Working2.cpp.xx
